# research-infra

./: .gitignore  README.md  pyproject.toml
src/research_infra/: __init__.py  autoresearch.py  cli.py  discover.py  manuscript.py  scaffold.py  schemas.py  slides.py  validate.py
src/research_infra/templates/: agents_md.jinja2  beamer.latex  manuscript.latex
tests/: conftest.py  test_autoresearch.py  test_discover.py  test_manuscript.py  test_scaffold.py  test_schemas.py  test_slides.py  test_validate.py
